--- a/public/cotact.html
+++ b/public/cotact.html
@@ -1,5 +1,8 @@
 <h1>Rofik Mahrori</h1>
 <hr>
+<a href="../index.html">home</a>
+<br><a href="../public/hobi.html">hobi</a>
+<hr>
 <h2>NO. HP</h2>
 <h3>0852-2737-8768</h3>
 <h2>Alamat</h2>
@@ -11,4 +14,3 @@
    <br>profinsi kalimantan selatan
    <br>Indonesia
 
-<a href="../index.html">back</a>
