--- a/public/hobi.html
+++ b/public/hobi.html
@@ -1,4 +1,39 @@
 <h1>Hobi Rofik Mahrori </h1>
+<hr>
+<a href="../index.html">home</a>
+<br><a href="./cotact.html">contact</a>
+<hr>
 <h2>berkebun</h2>
+<p>
+    saya banyak menyempakan diri untuk ke kebun walaupun
+    hanya untuk melihat tanaman dan membersihkan sedikit rumput liar.
+    saya akan merasakan bahagia ketika saya berada di kebun.
+    ada kepuasan yang tidak bisa saya ungkapkan ketika saya berada di kebun.
+    bagi saya kebun adalah sebuah obat ketika saya merasakan kejenuhan
+    seusai saya melakukan aktifitas.
+</p>
+<h2>memasak</h2>
+<p>
+    saya suka memakan masakan yang saya masak sendiri.
+    walaupun saya tidak begitu ahli dalam memasak 
+    tapi dalam hati kecil saya, saya lebih suka makan 
+    hasil masakan sendiri
+</p>
 <h2>belajar bahasa pemograman</h2>
+<p>
+    di usia 40 tahun saya baru menyadari bahwa pemograman mempunyai
+    masa depan yang cerah. oleh karena itu saya memulai mempelajari
+    pemograman. paket yang pertama saya beli adalah belajar
+    mengenai pemograman web dari Mrs Angelia. saya sangat berbahagia
+    bisa bertemu dengan mentor yang cocok dengan bagaimana saya mulai belajar
+    mengenai pemograman pemograman.
+</p>
 <h2>belajar hal hal baru</h2>
+<p>
+    saya pernah belajar
+    <ul>
+        <li>membengkel</li>
+        <li>service electronik</li>
+        <li>perbaikan kompor</li>
+    </ul>
+</p>
